2004-01-17  Stefan Jahn  <stefan@lkcc.org>

	* parse_dataset.y: Fixed reduce/reduce conflict.

	* scan_dataset.l: Added explicit rule for complex number.

2003-12-26  Stefan Jahn  <stefan@lkcc.org>

	* spsolver.cpp: Now running calcS() instead of calc().

	* net.cpp: Now counts the DC voltage sources in a circuit 
	list.

	* matrix.cpp: Fixed bug in matrix multiplication.

	* circuit.cpp: Each circuit has now 'type' field containing
	a circuit identifier.  Renamed calc() to calcS() and added a
	virtual calcG() method.  Changed all components.

	* check_netlist.c: Applied changes for DC analysis.

	* dcsolver.cpp, dcsolver.h, nodelist.cpp, nodelist.h: New 
	files implementing the DC analysis for passive elements for
	now.

2003-12-21  Stefan Jahn  <stefan@lkcc.org>

	* analysis.cpp, analysis.h, spsolver.cpp, spsolver.h: New files.
	Reorganized the source code in order to prepare it for other
	analysis types.

2003-12-20  Stefan Jahn  <stefan@lkcc.org>

	* input.cpp (createCircuit): Added 'Vdc', 'Idc' and 'Vac'
	components to the list of available components.

2003-12-07  Stefan Jahn  <stefan@lkcc.org>

	* check_netlist.c: Made modifications regarding the
	symmetrical transformator.

	* input.cpp (createCircuit): Added 'sTr' component to the
	list of available circuit components.

2003-12-05  Stefan Jahn  <stefan@lkcc.org>

	* matrix.cpp (stoy, stoz): New matrix conversion routines.

2003-12-01  Stefan Jahn  <stefan@lkcc.org>

	* net.cpp: Added support for differential s parameter 
	ports.

2003-11-30  Stefan Jahn  <stefan@lkcc.org>

	* check_netlist.c: Checking the number of .SP actions and
	the number of Pac definitions.

2003-11-28  Stefan Jahn  <stefan@lkcc.org>

	* matrix.cpp, matrix.h: Added new matrix computation class.
	Implemented all function necessary for port impedance
	transformations (add, sub, mul, inverse, etc.).

2003-11-22  Stefan Jahn  <stefan@lkcc.org>

	* parse_touchstone.y: New parser grammar for the touchstone file
	format implemented.
