@@ -1,7 +1,7 @@
 /*
- * component_id.h - global component identifier header file
+ * substrate.h - microstrip substrate class definitions
  *
- * Copyright (C) 2003, 2004 Stefan Jahn <stefan@lkcc.org>
+ * Copyright (C) 2004 Stefan Jahn <stefan@lkcc.org>
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,45 +18,23 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: component_id.h,v 1.3 2004/01/24 17:35:00 ela Exp $
+ * $Id: substrate.h,v 1.1 2004/01/24 17:35:51 ela Exp $
  *
  */
 
-#ifndef __COMPONENT_ID_H__
-#define __COMPONENT_ID_H__
+#ifndef __SUBSTRATE_H__
+#define __SUBSTRATE_H__
 
-/* Enumerate component type identifiers. */
-enum circuit_type {
-  CIR_UNKNOWN = -1,
-  CIR_GROUND,
-  CIR_OPEN,
-  CIR_TEE,
-  CIR_CROSS,
-  CIR_ITRAFO,
-  CIR_RESISTOR,
-  CIR_CAPACITOR,
-  CIR_INDUCTOR,
-  CIR_VCCS,
-  CIR_CCCS,
-  CIR_CCVS,
-  CIR_VCVS,
-  CIR_DCBLOCK,
-  CIR_DCFEED,
-  CIR_BIASTEE,
-  CIR_PAC,
-  CIR_ATTENUATOR,
-  CIR_CIRCULATOR,
-  CIR_ISOLATOR,
-  CIR_TRAFO,
-  CIR_STRAFO,
-  CIR_VDC,
-  CIR_IDC,
-  CIR_VAC,
-  CIR_PHASESHIFTER,
-  CIR_GYRATOR,
-  CIR_TLINE,
+class substrate : public object
+{
+ public:
+  substrate ();
+  substrate (const substrate &);
+  ~substrate ();
 
-  CIR_MSLINE
+ protected:
+
+ private:
 };
 
-#endif /* __COMPONENT_ID_H__ */
+#endif /* __SUBSTRATE_H__ */
