@@ -1,3 +1,8 @@
+2004-01-24  Stefan Jahn  <stefan@lkcc.org>
+
+	* circuit.h (class circuit): Added microstrip substrate 
+	property to basic circuit class.
+
 2004-01-17  Stefan Jahn  <stefan@lkcc.org>
 
 	* parse_dataset.y: Fixed reduce/reduce conflict.
